--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
-Flask==3.0.3  # Asegúrate de usar la versión de Flask que necesitas
+Flask==3.0.3 
+gunicorn==20.1.0  # Instalar Gunicorn para producción
